apps/radarr/radarr-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: radarr
  namespace: default
spec:
  parentRefs:
    - name: homelab-gateway
      namespace: default
  hostnames:
  - "radarr.home.williamlhunter.com"
  rules:
    - matches:
      - path:
          type: PathPrefix
          value: /
      backendRefs:
      - name: radarr
        port: 7878
